--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -3,11 +3,12 @@
    font-weight: normal;
    font-size: 50px;
    color: white;
-   text-align: center;
 }
 a , .link {
   color: aquamarine;
   font-size: 16px;
+}
+html {
+  background-color: black;
   text-align: center;
-
 }
