--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,12 +1,24 @@
+.header , .body1 , .body2 {
+   font-family: Verdana , sans-serif;
+}
+.header , .body1 {
+  color: white;
+}
 .header {
-   font-family: Verdana;
-   font-weight: normal;
-   font-size: 50px;
-   color: white;
+  font-weight: normal;
+  font-size: 50px;
+}
+.body1 {
+  font-weight: 300;
+  font-size: 42px;
+}
+.body2 {
+  font-size: 21px;
+  color: gray;
 }
 a , .link {
   color: aquamarine;
-  font-size: 16px;
+  font-size: 20px;
 }
 html {
   background-color: black;
